# Python-Extension-with-Kernel

./: CMakeLists.txt  PythonEmbeddingWrapper.cpp  PythonEmbeddingWrapper.h  PythonException.cpp  PythonException.h  PythonExtensionWithKernel.cpp  PythonExtensionWithKernel.h  PythonKernel.cpp  PythonKernel.h  PythonObject.cpp  PythonObject.h  README.md  kerasToTensoflow.py
PythonScript/: PathologyAnalyser_Kernel.py
